add initial HTML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<h1> Goodbye </h1>
-<h2> A program to bid our friends farewell all over the world. </h2>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Taylor's favorite things</title>
+</head>
+<body>
+  <h1>My favorite things</h1>
+  <h2>These are a few of my favorite things.</h2>
 
-<ul>
-  <li> English: Goodbye, friends! </li>
-  <li> Spanish:  Adios, amigos! </li>
-  <li> German: Auf Wiedersehn, freunden!</li>
-  <li> Russian: Do Svidaniya, druzya!</li>
-</ul>
+  <h3>People</h3>
+  <p>Here are some of my favorite people!</p>
+  <ul>
+    <li>My sister Brittany</li>
+    <li>My mom and dad:
+      <ul>
+        <li>Kathie</li>
+        <li>Steve</li>
+      </ul>
+    </li>
+    <li>My best friend Eden</li>
+    <li>My other best friend Sarah</li>
+  </ul>
+
+  <h3>Flavors of ice cream</h3>
+  <p>These are my three favorites, in order</p>
+  <ol>
+    <li>Plain frozen yogurt!</li>
+    <li>Pistachio</li>
+    <li>Combination of the two above!</li>
+  </ol>
+
+  <p>Thanks for reading about me!</p>
+</body>
+</html>
