--- a/favorite-places.html
+++ b/favorite-places.html
@@ -8,11 +8,10 @@
   <h1> My favorite places. </h1>
 
   <ul>
-    <li> PORTLAND </li>
-    <li> SEOUL </li>
-    <li> SYDNEY </li>
-    <li> FLORIDA </li> 
-
+    <li> PORTLAND </li> <img src="img/portland.jpg" width=500>
+    <li> SEOUL </li> <img src="img/seoul.jpg" width=500>
+    <li> SYDNEY </li> <img src="img/sydney.jpg" width=500>
+    <li> FLORIDA </li> <img src="img/florida.jpg" width=500>
   </ul>
 
 
