--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   </ol>
 
   <p>Thanks for reading about me!</p>
-  <a style="text-decoration:none" href="favorite-places.html"
-  " target="_blank">  Check out our favorite places. </a>
+  <a style="text-decoration:none" href="favorite-places.html" target="_blank">  
+    Check out our favorite places. 
+  </a>
   
 </body>
 </html>
